[gd_scene load_steps=16 format=2]

[ext_resource path="res://Items/dragonfly/dragonfly1.png" type="Texture" id=1]
[ext_resource path="res://Items/dragonfly/dragonfly0.png" type="Texture" id=2]
[ext_resource path="res://Items/dragonfly/dragonfly2.png" type="Texture" id=3]
[ext_resource path="res://Items/dragonfly/dragonfly3.png" type="Texture" id=4]
[ext_resource path="res://Items/dragonfly/dragonfly5.png" type="Texture" id=5]
[ext_resource path="res://Items/dragonfly/dragonfly6.png" type="Texture" id=6]
[ext_resource path="res://Items/dragonfly/dragonfly4.png" type="Texture" id=7]
[ext_resource path="res://Items/dragonfly/dragonfly8.png" type="Texture" id=8]
[ext_resource path="res://Items/dragonfly/dragonfly7.png" type="Texture" id=9]
[ext_resource path="res://Items/dragonfly/dragonfly11.png" type="Texture" id=10]
[ext_resource path="res://Items/dragonfly/dragonfly9.png" type="Texture" id=11]
[ext_resource path="res://Items/dragonfly/dragonfly10.png" type="Texture" id=12]
[ext_resource path="res://Items/dragonfly/Dragonfly.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "fly",
"speed": 14.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 17.1725

[node name="Dragonfly" type="Area2D" groups=[
"Item",
]]
position = Vector2( 568.783, 310.98 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.60065, 4.41662 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="area_entered" from="." to="." method="_on_Dragonfly_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Dragonfly_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
